--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">Información básica</div>
+            <div class="h4 mt-0 title">Información básica:</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Edad:</strong></div>
               <div class="col-sm-8">21</div>
@@ -408,6 +408,192 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+<div class="section">
+  <div class="container cc-education">
+    <div class="h4 text-center mb-4 title">Cursos:</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Abril 2018  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Capacítate para el empleo</div>
+            <p class="category">"Finder"</p>
+            <img src="images/finder.png" alt="Image" height="80"/>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Noviembre 2019  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Cisco</div>
+            <p class="category">"NDG Linux Essentials Español 0319 “Partner: NDG Linux Essentials"</p>
+            <img src="images/NDG.png" alt="Image" height="80"/>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Mayo 2020  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">DEVELOP</div>
+            <p class="category">"Oracle Certified Associate Java SE 8 Programmer"</p>
+            <img src="images/develop.png" alt="Image" height="60"/>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Junio 2020  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">LearnAThon_ITSOEH_ISIC-12020</div>
+            <p class="category">"Introduction to Cybersecurity”</p>
+            <a href="https://www.credly.com/badges/5cc9d1bf-acd6-447d-a389-8c70893acba6">Insignia</a>
+          </div>
+        </div>
+      </div>
+    </div>  
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Junio 2020  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">LearnAThon_ITSOEH_ISIC-22020 </div>
+            <p class="category">“Introduction to IoT"</p>            
+            <a href="https://www.credly.com/badges/70e791ec-2a3d-4bec-a2f4-4cace4ccf0fb">Insignia</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Octubre 2020  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Capacítate para el empleo</div>
+            <p class="category">"Técnico en reparación de laptops"</p>
+            <img src="images/laptops.png" alt="Image" height="80"/>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Mayo 2021  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Cisco</div>
+            <p class="category">"CCNAv7: Introduction to Networks”</p>
+            <a href="https://www.credly.com/badges/ef1be981-296e-42cf-b0b4-21511dc8a1b9">Insignia</a>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Noviembre 2021  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Capacítate para el empleo</div>
+            <p class="category">"Técnico en inteligencia de negocios"</p>
+            <img src="images/BI.png" alt="Image" height="80"/>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Diciembre 2021  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Cisco </div>
+            <p class="category">“CCNA: Switching, Routing, and Wireless Essentials"</p>            
+            <a href="https://www.credly.com/badges/8f082680-3287-41e4-b7b9-f16884c8de4b">Insignia</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
     <div class="container">
