--- a/index.html
+++ b/index.html
@@ -682,6 +682,23 @@
         </div>
       </div>
     </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p></p>
+            <div class="h5">Julio 2022  </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Vanguardia académica </div>
+            <p class="category">“Curso profesional de excel avanzado"</p>            
+            <p><a href="pdf/ExAv-LSA.pdf" target="_blank" rel="noopener noreferrer">Documento</a>.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
